--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
     
     <header>
         <div class="line"></div>
+
+        <div class="container header--area">
+            <div class="header-left">
+                <a href="/"> <img src="assets/images/logo.png" alt="logo page"> </a>
+            </div>
+            <div class="header-right">
+                <div class="header--search">
+                    <form>
+                        <input type="text" name="search" placeholder="Search">
+                        <button>
+                            <img src="assets/images/loupe.png" alt="button search">
+                        </button>
+                    </form>
+                </div>
+                <div class="header--menu">
+                    <img src="assets/images/menu.png" alt="button menu">
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
