--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
             </div>
         </div>
     </header>
+
+    <section class="banner">
+        <div class="container">
+            <h1>Starbucks <br/> Happy Hour</h1>
+            <span>We'll meet you in your inbox. Drink deals are on their way.</span>
+
+            <div class="banner--images">
+                <img src="assets/images/c1.jpg" alt="drink with syrup of cafe">
+                <img src="assets/images/c2.jpg" alt="coffee drink with chocolate">
+                <img src="assets/images/c3.jpg" alt="coffee with whipped cream and avocado syrup">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
