given start the creation of contents

--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
             </div>
         </div>
     </section>
+
+    <div class="area1">
+        <div class="area1--content">---</div>
+        <div class="area1--img1">...</div>
+        <div class="area1--img2">,,,</div>
+    </div>
 </body>
 </html>
