area 4 of the content created

--- a/index.html
+++ b/index.html
@@ -96,5 +96,27 @@
 
         <div class="area3--img1">...</div>
     </section>
+
+    <section class="area4">
+        <div class="area4--content">
+            <div class="bar"></div>
+
+            <h2>Kindness Starts <br/> With A Cup</h2>
+            <div class="area4--text">
+                ntroducing the Cups od Kindness 
+                collection: four very special drinks as 
+                delicious and refreshing as they are 
+                beautiful. Two new creations, Matcha 
+                Lemonade and violet drink, will join Pink 
+                Drink and Ombré pink Drink as instante 
+                summer favorites.
+            </div>
+            <a href="" class="button">learn more</a>
+        </div>
+
+        <div class="area4--img1">
+
+        </div>
+    </section>
 </body>
 </html>
