completed the creation of the site

--- a/index.html
+++ b/index.html
@@ -118,5 +118,12 @@
 
         </div>
     </section>
+
+    <section class="area5"></section>
+
+    <footer>
+        developed by: Marlon Santos <br/>
+        credits of the layout for Nice page
+    </footer>
 </body>
 </html>
