Completed the responsiveness

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="" class="button">learn more</a>
         </div>
 
-        <div class="area3--img1">...</div>
+        <div class="area3--img1"></div>
     </section>
 
     <section class="area4">
@@ -122,8 +122,8 @@
     <section class="area5"></section>
 
     <footer>
-        developed by: Marlon Santos <br/>
-        credits of the layout for Nice page
+        Developed by: Marlon Santos <br/>
+        Credits of the layout for Nice page
     </footer>
 </body>
 </html>
